--- a/README
+++ b/README
@@ -1,10 +1,4 @@
-###about us 
-this is a part of the project that is about us
 
-#Npm start
-"npm start"
-#Proiect use PARCEL
-npm i parcel 
-#conatct me 
-DANIELLuntars
-hatz
+
+About us 
+
